<resources>
    <string name="app_name">SecondProject</string>
    <string name="titleOfSong">The title of song</string>
    <string name="singer">Singer</string>
    <string name="genreOfMusic">Genre of music</string>
    <string name="TitleCreateDatabase">Create Database</string>
    <string name="ItemHeading">Heading</string>
    <string name="ItemDescription">Description</string>
    <string name="textviewTest">TextView</string>
    <string name="buttonPlay">Play</string>
    <string name="buttonPause">Pause</string>
    <string name="buttonStop">Stop</string>
    <string name="buttonPick">Pick Singer</string>
</resources>
